# F1tenth

./: .gitignore
1_ROS2Demo/: Submission.md
1_ROS2Demo/src/lab1_pkg/: package.xml  setup.py
1_ROS2Demo/src/lab1_pkg/lab1_pkg/: talker.py
2_SafetyNode/src/safety_node/: setup.py
3_WallFollow/src/: SUBMISSION.md
4_GapFollow/: SUBMISSION.md
4_GapFollow/src/gap_follow/src/: reactive_node.cpp
5_PurePursuit/src/pure_pursuit/scripts/: waypoint_logger.py
5_PurePursuit/src/pure_pursuit/src/: pure_pursuit_node.cpp
6_MotionPlanning/: SUBMISSION.md
6_MotionPlanning/RRT_pkg/include/rrt/: rrt.h
6_MotionPlanning/RRT_pkg/src/: rrt.cpp
7_MPC/: SUBMISSION.md
7_MPC/mpc/data/: robot_log_with_velocities_corrected.csv
7_MPC/mpc/scripts/: add_vel_profile.py  mpc_node.py
f1tenth_lab4/gap_follow/src/: f1tenth_lab4.code-workspace  reactive_node.cpp
f1tenth_lab6/RRT_pkg/include/rrt/: rrt.h
f1tenth_lab6/RRT_pkg/src/: rrt.cpp
lab1_ws/src/lab1_pkg/lab1_pkg/: relay.py
lab1_ws/src/lab1_pkg/launch/: lab1_launch.py
lab2_ws/src/safety_node/: Submission.md  package.xml
lab3_fenton_2/install/wall_follow/lib/wall_follow/: wall_follow_node
lab3_fenton_2/log/: latest_build
lab3_fenton_2/src/wall_follow/src/: wall_follow_node.cpp
sim_ws/install/safety_node/lib/safety_node/: TTC
sim_ws/install/safety_node/share/safety_node/: package.sh
sim_ws/log/: latest_build
sim_ws/src/safety_node/: Submission.md
sim_ws/src/safety_node/safety_node/: TTC.py
